# petty

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  LICENSE  Makefile  README.md  TASKS.md  config.toml.example
.agentaudit/: report.json
crates/agent-comms/: Cargo.toml
crates/agent-comms/src/: lib.rs  protocol.rs
crates/bouvet-agent/: AGENTS.md  Cargo.toml
crates/bouvet-agent/src/: exec.rs  fs.rs  handler.rs  main.rs  protocol.rs
crates/bouvet-core/: AGENTS.md  Cargo.toml
crates/bouvet-core/src/: client.rs  config.rs  error.rs  lib.rs  manager.rs  pool.rs  sandbox.rs
crates/bouvet-mcp/: Cargo.toml
crates/bouvet-mcp/src/: config.rs  http.rs  lib.rs  main.rs  server.rs
crates/bouvet-vm/: AGENTS.md  Cargo.toml
crates/bouvet-vm/src/: builder.rs  config.rs  error.rs  lib.rs  machine.rs  machine_config.rs  vsock.rs
crates/bouvet-vm/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  types.rs
crates/in-vm-agent/: Cargo.toml
crates/in-vm-agent/src/: executor.rs  fs.rs  main.rs  server.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/petty-agent/: AGENT.md
crates/petty-agent/src/: exec.rs  handler.rs  protocol.rs
crates/petty-core/: AGENTS.md  Cargo.toml
crates/petty-core/src/: client.rs  config.rs  error.rs  lib.rs  manager.rs  pool.rs
crates/petty-mcp/: Cargo.toml
crates/petty-mcp/src/: config.rs  http.rs  lib.rs  main.rs  server.rs  types.rs
crates/petty-vm/: Cargo.toml
crates/petty-vm/src/: config.rs  error.rs  lib.rs  machine.rs  vsock.rs
crates/sandbox-orchestrator/: Cargo.toml
crates/sandbox-orchestrator/src/: lib.rs
crates/vm-manager/: Cargo.toml  build.rs
crates/vm-manager/proto/: microvm.proto
crates/vm-manager/src/: lib.rs  manager.rs  models.rs
crates/vm-manager/src/flintlock/: client.rs  manager.rs  mapper.rs  mod.rs
docs/: ARCHITECTURE.md  CONFIG.md  PHASE1_PETTY_VM.md  PHASE2_AGENT_CORE.md  SELF_HOST.md
docs/dev/: PHASE1_PETTY_VM.md  PHASE2_AGENT_CORE.md  PHASE3_CORE.md  PHASE4_MCP.md  PHASE5_ROOTFS.md  PHASE6_PERFORMANCE.md  PHASE7_DEVOPS.md  PHASE7_DEVOPS_V2.md  TERRAFORM_REQUIREMENTS.md
docs/internals/: AGENT_CLIENT.md  AGENT_INTERNALS.md  AGENT_PROTOCOL.md  ERROR_HANDLING.md  MCP_SERVER.md  ROOTFS_IMAGE.md  SANDBOX_LIFECYCLE.md  SANDBOX_MANAGER.md  VM_LAYER.md  VSOCK_COMMUNICATION.md  WARM_POOL.md
docs/phases/: TERRAFORM_REQUIREMENTS.md
images/: .dockerignore  Dockerfile.agent  Dockerfile.devbox  Dockerfile.ext4  bouvet-agent.service  petty-agent.service
images/output/: .gitignore  bouvet-agent
scripts/: debug-firecracker.sh  dev-arm.sh  download-binaries.sh  entrypoint.sh
terraform/: README.md  data.tf  ec2.tf  main.tf  outputs.tf  s3-bucket-policy.json  security.tf  variables.tf  vpc.tf
terraform/s3/: main.tf  outputs.tf  variables.tf
terraform/scripts/: user-data.sh
