[package]
name = "petty-agent-comms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

# Internal dependencies
petty-common = { path = "../common" }
