[package]
name = "bouvet-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Guest agent for bouvet microVMs - handles JSON-RPC commands via vsock"

[[bin]]
name = "bouvet-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
