[package]
name = "bouvet-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for Bouvet sandboxes"

[[bin]]
name = "bouvet-mcp"
path = "src/main.rs"

[dependencies]
# Core
bouvet-core = { path = "../bouvet-core" }

# MCP SDK with HTTP transport
rmcp = { workspace = true, features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Schema generation for MCP
schemars = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Utilities
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
