[package]
name = "petty-in-vm-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-vsock.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
base64.workspace = true

petty-agent-comms = { path = "../agent-comms" }
