[package]
name = "petty-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server exposing Petty sandboxes to AI agents"

[[bin]]
name = "petty-mcp"
path = "src/main.rs"

[dependencies]
# Internal
petty-core = { path = "../petty-core" }

# MCP SDK (official Rust SDK)
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { workspace = true }

# Serialization + schema generation
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
