[package]
name = "petty-sandbox-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true

# Internal dependencies
petty-common = { path = "../common" }
petty-vm-manager = { path = "../vm-manager" }
petty-agent-comms = { path = "../agent-comms" }
